--- a/package.json
+++ b/package.json
@@ -8,17 +8,24 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.6.4",
+    "firebase": "^7.15.5",
+    "lodash": "^4.17.19",
+    "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.6.11",
+    "vue-lodash": "^2.1.2",
     "vue-router": "^3.1.6",
-    "vuetify": "^2.2.11"
+    "vuetify": "^2.2.11",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.7.0",
     "@vue/cli-plugin-babel": "^4.3.0",
     "@vue/cli-plugin-eslint": "^4.3.0",
     "@vue/cli-plugin-router": "^4.3.1",
+    "@vue/cli-plugin-vuex": "^4.4.6",
     "@vue/cli-service": "^4.3.0",
     "babel-eslint": "^10.1.0",
     "bootstrap": "^4.3.1",
