--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.11",
     "vue-lodash": "^2.1.2",
     "vue-router": "^3.1.6",
+    "vuedraggable": "^2.24.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
