--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.6.11",
     "vue-lodash": "^2.1.2",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.1.6",
     "vuedraggable": "^2.24.0",
     "vuetify": "^2.2.11",
